--- a/cieebluetooth/res/layout/activity_main.xml
+++ b/cieebluetooth/res/layout/activity_main.xml
@@ -1,4 +1,5 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout android:id="@+id/chart" 
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -6,7 +7,9 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity" >
+    tools:context=".MainActivity"
+    android:orientation = "vertical" 
+    >
 
     <ScrollView android:id="@+id/scroll1"
         android:layout_width="wrap_content"
@@ -19,8 +22,10 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
+        android:layout_alignParentTop="false"
         android:text="@string/hello_world" />
+
+    
 	</ScrollView>
 
-</RelativeLayout>
+</LinearLayout>
