--- a/cieebluetooth/res/layout/activity_main.xml
+++ b/cieebluetooth/res/layout/activity_main.xml
@@ -1,31 +1,29 @@
-<LinearLayout android:id="@+id/chart" 
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity"
-    android:orientation = "vertical" 
-    >
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:orientation="vertical" android:layout_width="fill_parent"
+              android:layout_height="fill_parent">
 
-    <ScrollView android:id="@+id/scroll1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" 
-        android:layout_weight="1">
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="false"
-        android:text="@string/hello_world" />
+    <LinearLayout android:orientation="horizontal" 
+        		  android:layout_width="fill_parent"
+                  android:layout_height="150dp">
+    	<ScrollView android:id="@+id/scroll1"
+        			android:layout_width="wrap_content"
+        			android:layout_height="wrap_content" 
+        			android:layout_weight="1">
+    			<TextView
+        			android:id="@+id/textView1"
+        			android:layout_width="wrap_content"
+        			android:layout_height="wrap_content"
+        			android:layout_alignParentBottom="true"
+        			android:layout_alignParentLeft="true"
+        			android:layout_alignParentRight="true"
+        			android:layout_alignParentTop="true"
+        			android:text="@string/hello_world" />
+		</ScrollView>
+    </LinearLayout>
 
-    
-	</ScrollView>
+    <LinearLayout android:id="@+id/chart" android:orientation="horizontal"
+                  android:layout_width="fill_parent" android:layout_height="0dip" android:layout_weight="1"/>
+
 
 </LinearLayout>
